// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip dark should match snapshot 1`] = `
<div
  className="jvtFJH"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot 1`] = `
<div
  className="bIWlOo"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is bottom 1`] = `
<div
  className="bAJEPY"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is invalid 1`] = `
<div
  className="bAJEPY"
  direction="invalid"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is left 1`] = `
<div
  className="eqeUMB"
  direction="left"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is right 1`] = `
<div
  className="lposbp"
  direction="right"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is top 1`] = `
<div
  className="gXAZue"
  direction="top"
/>
`;
